tests/ui/snapshots/ui__test_diff__diff_view_stat_format.snap
---
source: tests/ui/test_diff.rs
expression: terminal.backend()
---
"┌───────────────────── Tij - Diff View [testchan] [stat] ──────────────────────┐"
"│Commit: abc123def456                                                          │"
"│Author: Test User <test@example.com>  2024-01-30 12:00:00                     │"
"│Add new feature                                                               │"
"│ (no files)                                                                   │"
"│ src/main.rs | 10 ++++------                                                  │"
"│ src/lib.rs  |  5 +++++                                                       │"
"│ 2 files changed, 9 insertions(+), 6 deletions(-)                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
